--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -23,6 +23,7 @@ XB-Ruby-Versions: ${ruby:Versions}
 Depends: ruby | ruby-interpreter,
          ${misc:Depends}
 Breaks: ignition-tools
+Replaces: ignition-tools
 Multi-Arch: same
 Description: Entry point for using all the suite of ignition tools - app
  Ignition tools provide the ign command line tool that accepts multiple
@@ -38,6 +39,7 @@ Depends: cmake,
          ignition-tools2,
          ${misc:Depends}
 Breaks: libignition-tools-dev
+Replaces: libignition-tools-dev
 Multi-Arch: same
 Description: Entry point for using all the suite of ignition tools - cmake support
  Ignition tools provide the ign command line tool that accepts multiple
