--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -6,7 +6,8 @@ Build-Depends: debhelper (>= 11),
                cmake,
                gem2deb,
                libbackward-cpp-dev,
-               libgz-cmake4-dev,
+# The packages upports gz-cmake3 (Garden/Harmonic) and gz-cmake4 (Ionic)
+               libgz-cmake3-dev | libgz-cmake4-dev,
                pkg-config,
                ruby
 XS-Ruby-Versions: all
@@ -39,7 +40,7 @@ Architecture: any
 Section: libdevel
 Depends: cmake,
          gz-tools2,
-         libgz-cmake4-dev,
+         libgz-cmake3-dev | libgz-cmake4-dev,
          ${misc:Depends}
 Breaks: libignition-tools2-dev (<< 1.999.999+nightly+git20220630+1r4051562399e3f34a3b41f601839247f071f80319-1)
 Replaces: libignition-tools2-dev (<< 1.999.999+nightly+git20220630+1r4051562399e3f34a3b41f601839247f071f80319-1)
