--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -24,9 +24,12 @@ XB-Ruby-Versions: ${ruby:Versions}
 Depends: ruby | ruby-interpreter,
          ${misc:Depends}
 Conflicts: gazebo (>= 11.0.0),
-           gazebo11
-Breaks: ignition-tools2 (<< 1.999.999+nightly+git20220630+1r4051562399e3f34a3b41f601839247f071f80319-1)
-Replaces: ignition-tools2 (<< 1.999.999+nightly+git20220630+1r4051562399e3f34a3b41f601839247f071f80319-1)
+           gazebo (<= 11.14.0),
+           gazebo11 (<= 11.14.0)
+Breaks: ignition-tools2 (<< 1.999.999+nightly+git20220630+1r4051562399e3f34a3b41f601839247f071f80319-1),
+        gazebo11-gz-cli
+Replaces: ignition-tools2 (<< 1.999.999+nightly+git20220630+1r4051562399e3f34a3b41f601839247f071f80319-1),
+        gazebo11-gz-cli
 Multi-Arch: same
 Description: Entry point for using all the suite of Gazebo tools - app
  Gazebo tools provide the gz command line tool that accepts multiple
