Add doxygeen to build-deps and support tag installation
Signed-off-by: Jose Luis Rivero <jrivero@osrfoundation.org>

--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -4,6 +4,7 @@ Section: science
 Priority: optional
 Build-Depends: debhelper (>= 11),
                cmake,
+               doxygen,
                gem2deb,
                libbackward-cpp-dev,
 # The packages upports gz-cmake3 (Garden/Harmonic) and gz-cmake4 (Ionic)
