Add gz-jetty-tools alias package
Add gz-jetty-tools package that depends on gz-tools2.

Signed-off-by: Steve Peters <scpeters@openrobotics.org>

--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -72,3 +72,11 @@ Priority: optional
 Section: oldlibs
 Description: transitional package
  This is a transitional package. It can safely be removed.
+
+Package: gz-jetty-tools
+Depends: gz-tools2 (= ${binary:Version}), ${misc:Depends}
+Architecture: all
+Priority: optional
+Section: metapackages
+Description: alias package
+ Provides a package for Jetty without exposing the version number.
